xingmux: fix compiler warnings

https://bugzilla.gnome.org/show_bug.cgi?id=750596